<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/appbar_padding_top"
    android:layout_marginVertical="@dimen/appbar_padding_top"
    tools:context=".Activity.AddNewsActivity"
    tools:layout_editor_absoluteY="25dp"
    android:background="@color/white">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="0dp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvAddStory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="445dp"
        android:text="@string/title_add_story"
        android:textSize="30sp"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/progressUpload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btAddStory"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginBottom="7dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/title_upload_image"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/etAddStoryTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivUpload" />

    <EditText
        android:id="@+id/etFullStory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/et_add_story_story"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btUpload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddStoryTitle" />

    <Button
        android:id="@+id/btUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="onUpload"
        android:text="@string/bt_upload_title"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFullStory" />

    <ImageView
        android:id="@+id/ivUpload"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/btAddStory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddStory"
        app:srcCompat="@color/black" />

    <EditText
        android:id="@+id/etAddStoryTitle"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/et_add_story_title"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDarker"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/etFullStory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAddStory" />

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progressUpload"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btUpload"
        app:layout_constraintTop_toBottomOf="@+id/tvAddStory"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>